--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Josh Witter!</h1>
+        		<h1>Josh Witter</h1>
 				<p>I'm a 4th year PhD student studying Economics at Texas A&M University. I study applied microeconomics
 					including labor economics, public health insurance, and their intersection. </p>
     		</div><!-- /.blurb -->
