--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Josh Witter
+title: home
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Joshua Witter</h1>
+	<p>I am a 4th year Economics PhD student at Texas A&M University. I study applied microeconomics including the labor economics, health economics, and their intersection. </p>
 </div><!-- /.blurb -->
