--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: home
 ---
 <div class="blurb">
 	<h1>Joshua Witter</h1>
-	<p>I am a 4th year Economics PhD student at Texas A&M University. I study applied microeconomics including the labor economics, health economics, and their intersection. </p>
+	<p>I am a 4th year Economics PhD student at Texas A&M University. I study applied microeconomics including labor and health economics, and their intersection. </p>
 </div><!-- /.blurb -->
