--- a/cv/index.html
+++ b/cv/index.html
@@ -2,3 +2,8 @@
 layout: default
 title: CV
 ---
+
+	    	<ul>
+	        		<li><a href="https://drive.google.com/file/d/1XfLrXVzjJUuVv973yyxJB6YC0vyG8Xmg/view?usp=sharing">CV-8.9.2018</a></li>
+				</ul>
+	
