--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: home
 ---
 <div class="blurb">
 	<h1>Joshua Witter</h1>
-	<p>I am a 5th year Economics PhD student at Texas A&M University. I study applied microeconomics including the labor supply effects of means-tested transfer programs for low-income households. </p>
+	<p>I am a 5th year Economics PhD student at Texas A&M University. I study applied microeconomics including the labor supply effects of means-tested transfer programs like Medicaid and the Earned Income Tax Credit. </p>
 </div><!-- /.blurb -->
