--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@ title: home
 ---
 <div class="blurb">
 	<h1>Joshua Witter</h1>
+	<img src="/images/tamu.png" alt="Simply Easy Learning" width="200" height="80">
 	<p>I am a 5th year Economics PhD student at Texas A&M University. I am an applied microeconomist studying the labor supply effects of means-tested transfer programs like Medicaid and the Earned Income Tax Credit. </p>
 </div><!-- /.blurb -->
