--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: home
 ---
 <div class="blurb">
-	<img src="/images/tamu.png" alt="Simply Easy Learning" width="300" height="300">
 	<h1>Joshua Witter</h1>
+	<img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300">
 	<p>I am a 5th year Economics PhD student at Texas A&M University. I am an applied microeconomist studying the labor supply effects of means-tested transfer programs like Medicaid and the Earned Income Tax Credit. </p>
 </div><!-- /.blurb -->
