--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: home
 ---
 <div class="blurb">
 	<h1>Joshua Witter</h1>
-	<img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300">
+	<!-- <img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300"> -->
+	<img src="/images/job_market_photo1_lv_1.jpg" alt="photo LV" width="300" height="300">
 	<p>I am a 5th year Economics PhD student at Texas A&M University. I am an applied microeconomist studying the labor supply effects of means-tested transfer programs like Medicaid and the Earned Income Tax Credit. </p>
 </div><!-- /.blurb -->
