--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,1 +1,14 @@
-
+<div class="blurb">
+	<h3>Teaching Experience </h3>
+	  <p> Microeconomic Theory (Undergraduates) </p>
+  
+  <h3>Teaching Awards </h3>
+	  <p> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
+  
+  <h3> Select Quotes from Student Evaluations </h3>
+    <ul style="list-style: none;">
+    <li> "I would take another course with this professor because he cares about his students because he remembers
+  being an undergraduate and knows how difficult it can be at times." </li>
+    <li>Second item</li>
+    </ul>
+</div><!-- /.blurb -->
