--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,6 +1,6 @@
 <div class="blurb">
 	<h3>Teaching Experience </h3>
-	  <p> Microeconomic Theory (Undergraduates) </p>
+	  <p> Intermediat Microeconomic Theory - Fall 2017 </p>
   
   <h3>Teaching Awards </h3>
 	  <p> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
@@ -9,6 +9,7 @@
     <ul style="list-style: none;">
     <li> "I would take another course with this professor because he cares about his students because he remembers
   being an undergraduate and knows how difficult it can be at times." </li>
-    <li>Second item</li>
+    <li> "Always had extra office hours and would reply promptly to emails!" </li>
+    <li> "The exams were a fair representation of the materials" </li>
     </ul>
 </div><!-- /.blurb -->
