--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,6 +1,6 @@
 <div class="blurb">
 	<h3>Teaching Experience </h3>
-	  <p> Intermediat Microeconomic Theory - Fall 2017 </p>
+	  <p> Intermediate Microeconomic Theory - Fall 2017 </p>
   
   <h3>Teaching Awards </h3>
 	  <p> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
