--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: home
 	<h1>Joshua Witter</h1>
 	<!-- <img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300"> -->
 	<img src="/images/job_market_photo1_lv.jpg" alt="photo LV" width="300">
-	<p>I am a 5th year Economics PhD student at Texas A&M University. I am an applied microeconomist studying the labor supply and health effects of means tested transfer programs. </p>
+	<p>I am a 5th year Economics PhD student at Texas A&M University. My research interests include the labor supply and health effects of means tested transfer programs. </p>
 </div><!-- /.blurb -->
