--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,4 +1,4 @@
-<div class="blurb">
+<div class="teach">
 	<h3>Teaching Experience </h3>
 	  <p> Intermediate Microeconomic Theory - Fall 2017 </p>
   
@@ -12,4 +12,4 @@
     <li> "Always had extra office hours and would reply promptly to emails!" </li>
     <li> "The exams were a fair representation of the materials" </li>
     </ul>
-</div><!-- /.blurb -->
+</div><!-- /.teach -->
