--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,3 +1,7 @@
+---
+layout: default
+title: Teaching
+---
 <div class="teach">
 	<h3>Teaching Experience </h3>
 	  <p> Intermediate Microeconomic Theory - Fall 2017 </p>
