--- a/teaching/index.html
+++ b/teaching/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Teaching
 ---
 <div class="teach">
-<h2>Teaching Experience </h3>
+<h2>Instructor Experience </h3>
 	  <p> Intermediate Microeconomic Theory - Fall 2017 </p>
   
 <h2>Teaching Awards </h3>
@@ -35,4 +35,6 @@ us to more cases about economics applied in real-world situations. Professor Wit
 
      <li> "Great professor, genuinely cares about his students and their success." </li>    
     </ul>
+<h2>Other Teaching Experience </h3>
+	  <p> I have also been a teaching assistant for Principles of Economics, Introduction to Econometrics, Program Evaluation, Health Economics, and Game Theory </p>
 </div><!-- /.teach -->
