--- a/teaching/index.html
+++ b/teaching/index.html
@@ -4,7 +4,7 @@ title: Teaching
 ---
 <div class="teach">
 <h2>Instructor Experience </h3>
-	  <p> Intermediate Microeconomic Theory - Fall 2017 </p>
+	  <p style="font-size:20px"> Intermediate Microeconomic Theory - Fall 2017 </p>
   
 <h2>Teaching Awards </h3>
 	  <p> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
