--- a/teaching/index.html
+++ b/teaching/index.html
@@ -7,7 +7,7 @@ title: Teaching
 	  <p style="font-size:20px"> Intermediate Microeconomic Theory - Fall 2017 </p>
   
 <h2>Teaching Awards </h3>
-	  <p> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
+	  <p style="font-size:20px"> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
   
 <h2> Select Quotes from Student Evaluations </h3>
  <ul style="line-height:1.5;">
@@ -36,5 +36,5 @@ us to more cases about economics applied in real-world situations. Professor Wit
      <li> "Great professor, genuinely cares about his students and their success." </li>    
     </ul>
 <h2>Other Teaching Experience </h3>
-	  <p> I have also been a teaching assistant for Principles of Economics, Introduction to Econometrics, Program Evaluation, Health Economics, and Game Theory </p>
+	  <p style="font-size:20px"> I have also been a teaching assistant for Principles of Economics, Introduction to Econometrics, Program Evaluation, Health Economics, and Game Theory </p>
 </div><!-- /.teach -->
