--- a/research/index.html
+++ b/research/index.html
@@ -1,1 +1,23 @@
-
+---
+layout: default
+title: Research
+---
+<div class="research">
+<h3>Working Papers</h3>
+<ul style="list-style-type:none;">
+  <li> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
+  CPS" </li>
+  <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
+  Derek Monson) </li>
+  
+</ul>
+  
+<h3>Works in Progress</h3>
+<ul style="list-style-type:none;">
+  <li> "Health Insurance Affects on Labor Supply, Retirement, and Marriage" </li>
+  <li> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
+    IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
+  <li> “The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark
+   Duggan, Katherine Meckel, and Hui Ding). </li>
+</ul>
+</div><!-- /.research -->
