--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@ title: Research
 ---
 <div class="research">
 <h2>Working Papers</h2>
-<ul style="list-style-type:none;">
+<ul style="list-style-type:none; line-height:200%">
   <li> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
   CPS" </li>
   <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
@@ -13,8 +13,8 @@ title: Research
 </ul>
   
 <h2>Works in Progress</h2>
-<ul style="list-style-type:none;">
-  <li> "Health Insurance Affects on Labor Supply, Retirement, and Marriage" </li>
+<ul style="list-style-type:none; line-height:200%">
+  <li> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
   <li> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
     IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
   <li> “The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark
