--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@ title: Research
 ---
 <div class="research">
 <h2>Working Papers</h2>
-<ul style="list-style-type:none; line-height:200%">
+<ul style="list-style-type:none; padding-bottom: 0 0 1em 0;">
   <li> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
   CPS" </li>
   <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
@@ -13,7 +13,7 @@ title: Research
 </ul>
   
 <h2>Works in Progress</h2>
-<ul style="list-style-type:none; line-height:200%">
+<ul style="list-style-type:none; padding:0 0 1em 0;">
   <li> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
   <li> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
     IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
