--- a/research/index.html
+++ b/research/index.html
@@ -4,7 +4,7 @@ title: Research
 ---
 <div class="research">
 <h2>Working Papers</h2>
-<ul style="list-style-type:none; padding-bottom: 0 0 1em 0;">
+<ul style="list-style-type:none; padding: 0 0 1em 0;">
   <li> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
   CPS" </li>
   <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
