--- a/research/index.html
+++ b/research/index.html
@@ -4,8 +4,8 @@ title: Research
 ---
 <div class="research">
 <h2>Working Papers</h2>
-<ul style="list-style-type:none; padding: 0 0 2em 0;">
-  <li> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
+<ul style="list-style-type:none">
+  <li style=" padding: 0 0 2em 0"> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
   CPS" </li>
   <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
   Derek Monson) </li>
