--- a/research/index.html
+++ b/research/index.html
@@ -5,7 +5,7 @@ title: Research
 <div class="research">
 <h2>Working Papers</h2>
 <ul style="list-style-type:none">
-  <li style=" padding: 0 0 2em 0"> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
+  <li style=" padding: 0 0 1em 0"> "The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
   CPS" </li>
   <li> "The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
   Derek Monson) </li>
@@ -13,9 +13,9 @@ title: Research
 </ul>
   
 <h2>Works in Progress</h2>
-<ul style="list-style-type:none; padding:0 0 2em 0;">
-  <li> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
-  <li> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
+<ul style="list-style-type:none">
+  <li style=" padding: 0 0 1em 0"> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
+  <li style=" padding: 0 0 1em 0"> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
     IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
   <li> “The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark
    Duggan, Katherine Meckel, and Hui Ding). </li>
