--- a/research/index.html
+++ b/research/index.html
@@ -6,20 +6,28 @@ title: Research
 <h2>Working Papers</h2>
 <ul style="list-style-type:none">
   
-  <li style="padding: 0 0 1em 0"> ,<b>"The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the
-    CPS"</b> </li>
-  <li style="padding: 0 0 2em 0"> The Earned Income Tax Credit, a program designed to aid low-income households, and encourage work, lifts millions of families out of poverty every year. Given its' pro-work incentives, there has been droves of research analyzing the magnitude of employment effects, most of which has been focused around households with children. I focus on employment effects for an understudied population, childless adults, who have recently been the center of EITC expansion policy discussions. I use a difference-in-differences (DD) framework with Current Population Survey data to estimate the impact of expanding state EITCs on the employment of childless adults. Expanding state EITCs has led to significant increases in employment for childless women and small insignificant effects for childless men. A closer examination uncovers meaningful differences between men and women in the characteristics of marginal workers that future EITC expansions should take into account. </li>
+  <li style="padding: 0 0 1em 0"><b>"The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the CPS"</b> </li>
+  <li style="padding: 0 0 1em 0"> The Earned Income Tax Credit, a program designed to aid low-income households, and encourage work, lifts millions of families out of poverty every year. Given its' pro-work incentives, there has been droves of research analyzing the magnitude of employment effects, most of which has been focused around households with children. I focus on employment effects for an understudied population, childless adults, who have recently been the center of EITC expansion policy discussions. I use a difference-in-differences (DD) framework with Current Population Survey data to estimate the impact of expanding state EITCs on the employment of childless adults. Expanding state EITCs has led to significant increases in employment for childless women and small insignificant effects for childless men. A closer examination uncovers meaningful differences between men and women in the characteristics of marginal workers that future EITC expansions should take into account. </li>
   
-  <li> <b>"The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
+  <li style="padding: 0 0 1em 0"><b>"The Economic Consequences of Placing a Child for Adoption" (with Joseph Price, Julie Hollenbaugh, and
     Derek Monson) </b></li>
+  <li> Past research suggests that only 1 percent of children born to unmarried teenage mothers are
+  placed for adoption. This low rate of adoption placement is surprising given the large possible
+  economic consequences of teenage childbearing. We document the economic consequences on
+  the four groups of people most directly affected by the decision to place the child for adoption:
+  the mother, the child, the future children of the mother, and the grandparents of the child. We
+  find that, on average, the combined lifetime economic benefit to these four groups from the
+  decision to place a child for adoption is well over a million dollars. While the decision to place a
+  child for adoption involves consideration of multiple social, family, and child factors, the results
+  in this paper suggest that policies that produce even a small increase in the fraction of unmarried
+    teenage mothers placing their child for adoption could produce very large social returns. </li>
   
 </ul>
   
 <h2>Works in Progress</h2>
 <ul style="list-style-type:none">
   <li style=" padding: 0 0 1em 0"> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
-  <li style=" padding: 0 0 1em 0"> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative
-    IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
+  <li style=" padding: 0 0 1em 0"> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
   <li> “The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark
    Duggan, Katherine Meckel, and Hui Ding). </li>
 </ul>
