--- a/research/index.html
+++ b/research/index.html
@@ -26,7 +26,7 @@ title: Research
   
 <h2>Works in Progress</h2>
 <ul style="list-style-type:none">
-  <li style=" padding: 0 0 1em 0"> "Public Health Insurance, Health Status, and Retirement Decisions" (with Laura Dague and Marguerite Burns) </li>
+  <li style=" padding: 0 0 1em 0"> "Public Health Insurance, Health Status, and Retirement Decisions: Evidence using the CPS and Restricted MEPS Data" (with Laura Dague and Marguerite Burns) </li>
   <li style=" padding: 0 0 1em 0"> "Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </li>
   <li> “The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark
    Duggan, Katherine Meckel, and Hui Ding). </li>
