--- a/research/index.html
+++ b/research/index.html
@@ -3,12 +3,15 @@ layout: default
 title: Research
 ---
 <div class="research">
-<h2>Working Papers</h2>
+
+<h2>Job Market Paper (draft available soon)</h2>
 <ul style="list-style-type:none">
-  
   <li style="padding: 0 0 1em 0"><b>"The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the CPS"</b> </li>
   <li style="padding: 0 0 1em 0"> The Earned Income Tax Credit, a program designed to aid low-income households, and encourage work, lifts millions of families out of poverty every year. Given its' pro-work incentives, there has been droves of research analyzing the magnitude of employment effects, most of which has been focused around households with children. I focus on employment effects for an understudied population, childless adults, who have recently been the center of EITC expansion policy discussions. I use a difference-in-differences (DD) framework with Current Population Survey data to estimate the impact of expanding state EITCs on the employment of childless adults. Expanding state EITCs has led to significant increases in employment for childless women and small insignificant effects for childless men. A closer examination uncovers meaningful differences between men and women in the characteristics of marginal workers that future EITC expansions should take into account. </li>
+</ul>
   
+<h2>Working Papers</h2>
+<ul style="list-style-type:none">
   <li style="padding: 0 0 1em 0"><a href="/research/adoption_manuscript.pdf"><b>"The Economic Consequences of Placing a Child for Adoption"</a> (with Joseph Price, Julie Hollenbaugh, and
     Derek Monson)</b></li>
   <li> Past research suggests that only 1 percent of children born to unmarried teenage mothers are
@@ -21,7 +24,6 @@ title: Research
   child for adoption involves consideration of multiple social, family, and child factors, the results
   in this paper suggest that policies that produce even a small increase in the fraction of unmarried
     teenage mothers placing their child for adoption could produce very large social returns. </li>
-  
 </ul>
   
 <h2>Works in Progress</h2>
