--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: home
 	<h1>Joshua Witter</h1>
 	<!-- <img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300"> -->
 	<img src="/images/job_market_photo1_lv.jpg" alt="photo LV" width="300">
-	<p>I am a PhD Candidate in Economics at Texas A&M University. My research interests include the labor supply and health effects of government programs and policies that affect low-wage workers. </p>
+	<p>I am a PhD Economist at the Church of Jesus Christ of Latter-day Saints. My academic research interests include the labor supply and health effects of government programs and policies that affect low-wage workers. </p>
 </div><!-- /.blurb -->
