--- a/research/index.html
+++ b/research/index.html
@@ -6,7 +6,7 @@ title: Research
 
 <h2>Job Market Paper</h2>
 <ul style="list-style-type:none">
-  <li style="padding: 0 0 1em 0"><b>"The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the CPS"</b> (draft coming soon) </li>
+  <li style="padding: 0 0 1em 0"><a href="/research/adoption_manuscript.pdf"><b>"The Labor Supply Supply Effects of the Earned Income Tax Credit for Childless Adults: Evidence using the CPS"</a></b></li>
   <li style="padding: 0 0 1em 0"> The Earned Income Tax Credit, a program designed to aid low-income households, and encourage work, lifts millions of families out of poverty every year. Given its' pro-work incentives, there has been droves of research analyzing the magnitude of employment effects, most of which has been focused around households with children. I focus on employment effects for an understudied population, childless adults, who have recently been the center of EITC expansion policy discussions. I use a difference-in-differences (DD) framework with Current Population Survey data to estimate the impact of expanding state EITCs on the employment of childless adults. Expanding state EITCs has led to significant increases in employment for childless women and small insignificant effects for childless men. A closer examination uncovers meaningful differences between men and women in the characteristics of marginal workers that future EITC expansions should take into account. </li>
 </ul>
   
