--- a/teaching/index.html
+++ b/teaching/index.html
@@ -4,7 +4,9 @@ title: Teaching
 ---
 <div class="teach">
 <h2>Instructor Experience </h3>
-	  <p style="font-size:20px"> Intermediate Microeconomic Theory - Fall 2017 </p>
+	  <p style="font-size:20px"> Intermediate Microeconomic Theory - Fall 2017 (Texas A&M University) </p>
+	  <p style="font-size:20px"> Principles of Economics - Spring 2021 (Brigham Young University) </p>
+
   
 <h2>Teaching Awards </h3>
 	  <p style="font-size:20px"> Outstanding Graduate Student Instructor - Texas A&M Economics (2017) </p>
