--- a/research/index.html
+++ b/research/index.html
@@ -6,7 +6,7 @@ title: Research
 
 <h2>Dissertation</h2>
 <ul style="list-style-type:none">
-  <li> <b>“Essays on The Employment of Low-income Workers</b></li>
+   <li style="padding: 0 0 1em 0"><a href="/research/TAMUdissertation_Spring2020.pdf"><b>"Essays on The Employment of Low-income Workers"</a></b></li>
 </ul>
 
   
