--- a/teaching/index.html
+++ b/teaching/index.html
@@ -13,7 +13,12 @@ title: Teaching
   
 <h2> Select Quotes from Student Evaluations </h3>
  <ul style="line-height:1.5;">
-    <li> "I would take another course with this professor because he cares about his students because he remembers
+   
+	  <li> "Economics with Professor Witter was truly a great learning experience. Economics is a tough subject with any professor,
+		but Dr. Witter took every measure to make sure that we had every resource needed to succeed! 
+		 Really enjoyed the class, and really grateful for Dr. Witter!" </li>
+	 
+	<li> "I would take another course with this professor because he cares about his students because he remembers
   being an undergraduate and knows how difficult it can be at times." </li>
 	    
     <li> "Always had extra office hours and would reply promptly to emails!" </li>
