--- a/research/index.html
+++ b/research/index.html
@@ -7,6 +7,9 @@ title: Research
 <h2>Dissertation</h2>
 <ul style="list-style-type:none">
    <li style="padding: 0 0 1em 0"><a href="/research/TAMUdissertation_Spring2020.pdf"><b>"Essays on The Employment of Low-income Workers"</a></b></li>
+   <li> Chapter 1: The Earned Income Tax Credit and Employment for Childless Adults </li>
+   <li> Chapter 2: Public Health Insurance and Retirement Decisions </li>
+   <li> Chapter 3: Occupation and Industry Mobility of Low-wage Workers</li>
 </ul>
 
   
