--- a/research/index.html
+++ b/research/index.html
@@ -36,6 +36,8 @@ title: Research
   
 <h2>Works in Progress</h2>
 <ul style="list-style-type:none">
+  <li style=" padding: 0 0 1em 0"> <b> ”Effects of the Earned Income Tax Credit for Childless Adults: A Regression Discontinuity Approach: Evidence
+using the SIPP” (with Jonathan Meer) </b></li>
   <li style=" padding: 0 0 1em 0"> <b>"Public Health Insurance, Health Status, and Retirement Decisions: Evidence using the CPS and Restricted MEPS Data" (with Laura Dague and Marguerite Burns) </b></li>
   <li style=" padding: 0 0 1em 0"> <b>"Earnings Trajectories of Low-Wage Workers: Evidence using SIPP Survey Data Linked to Administrative IRS/SSA Earnings Data" (with Jonathan Meer and Kyle Spears) </b></li>
   <li> <b>“The Impact of Innovation in Health Care: The Case of Hepatitis C Pharmaceutical Treatments.” (with Mark Duggan, Katherine Meckel, and Hui Ding). </b></li>
