--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: home
 	<h1>Joshua Witter, Ph.D.</h1>
 	<!-- <img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300"> -->
 	<img src="/images/job_market_photo1_lv.jpg" alt="photo LV" width="300">
-	<p>I am an Economic specializing in causal inference with a Ph.D. in Economics from Texas A&M University. As a researcher, I enjoy uncovering the causal effects of nearly any program, product, or policy change in government, business, and healthcare with advanced econometric methods.  </p>
+	<p>I am an Economist specializing in causal inference with a Ph.D. in Economics from Texas A&M University. As a researcher, I enjoy uncovering the causal effects of nearly any program, product, or policy change in government, business, and healthcare with advanced econometric methods.  </p>
 </div><!-- /.blurb -->
