--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: home
 	<h1>Joshua Witter, Ph.D.</h1>
 	<!-- <img src="/images/tamu.png" alt="TAMU LOGO" width="300" height="300"> -->
 	<img src="/images/job_market_photo1_lv.jpg" alt="photo LV" width="300">
-	<p> I currently work at Amazon.com LLC, where I apply econometrics and data science to build and deploy large-scale models that evaluate programs impacting worker health, safety, and retention. Previously, I worked for the Church of Jesus Christ of Latter-day Saints, conducting causal econometric analyses, designing and running field experiments, and leading qualitative research efforts. I have taught undergraduate economics courses at both BYU and Texas A&M, and I actively volunteer as a math and statistics tutor in my community. </p>
+	<p> I’m an applied economist and data scientist at Amazon, where I build large-scale econometric models to evaluate programs that impact worker health, safety, and retention. Previously, I led causal analyses, field experiments, and qualitative research for the Church of Jesus Christ of Latter-day Saints. I've also taught undergraduate economics at BYU and Texas A&M and volunteer as a math and statistics tutor. </p>
 </div><!-- /.blurb -->
