--- a/cv/index.html
+++ b/cv/index.html
@@ -3,6 +3,6 @@ layout: default
 title: CV
 ---
 <ul>
-	<li><a href="https://drive.google.com/file/d/1ah1k6Bi9zmc5BqexNhFlEScL0ysyiIJH/view?usp=sharing">CV-5.6.2019</a></li>
+	<li><a href="https://drive.google.com/file/d/13ov6xm8B8vU4ZvEC9GA0U6pCrzM39p2y/view?usp=drive_link">Resume-12.5.25</a></li>
 </ul>
 	
