--- a/research/index.html
+++ b/research/index.html
@@ -4,6 +4,13 @@ title: Research
 ---
 <div class="research">
 
+<h2>Published</h2>
+<ul style="list-style-type:none">
+  <li style="padding: 0 0 1em 0"><a href="/research/EITC_jswitter_meer.pdf"><b>"Effects of the Earned Income Tax Credit
+for Childless Adults: A Regression Discontinuity Approach"</a></b></li>
+  <li style="padding: 0 0 1em 0"> Most antipoverty policy in the United States focuses on families with children, but efforts to assist childless adults have gained traction in recent years. We examine the impact of the earned income tax credit on the labor force outcomes of childless adults using the age-25 eligibility discontinuity. We find no impacts on labor force participation and employment outcomes, which may be due to lack of information about the credit, lack of behavioral response due to its small size, or that childless adults already have very high labor force participation rates. </li>
+</ul>  
+   
 <h2>Dissertation</h2>
 <ul style="list-style-type:none">
    <li style="padding: 0 0 1em 0"><a href="/research/TAMUdissertation_Spring2020.pdf"><b>"Essays on The Employment of Low-income Workers"</a></b></li>
