--- a/research/index.html
+++ b/research/index.html
@@ -10,21 +10,20 @@ title: Research
 for Childless Adults: A Regression Discontinuity Approach"</a></b></li>
   <li style="padding: 0 0 1em 0"> Most antipoverty policy in the United States focuses on families with children, but efforts to assist childless adults have gained traction in recent years. We examine the impact of the earned income tax credit on the labor force outcomes of childless adults using the age-25 eligibility discontinuity. We find no impacts on labor force participation and employment outcomes, which may be due to lack of information about the credit, lack of behavioral response due to its small size, or that childless adults already have very high labor force participation rates. </li>
 </ul>  
-   
-<h2>Dissertation</h2>
-<ul style="list-style-type:none">
-   <li style="padding: 0 0 1em 0"><a href="/research/TAMUdissertation_Spring2020.pdf"><b>"Essays on The Employment of Low-income Workers"</a></b></li>
-   <li> Chapter 1: The Earned Income Tax Credit and Employment for Childless Adults </li>
-   <li> Chapter 2: Public Health Insurance and Retirement Decisions </li>
-   <li> Chapter 3: Occupation and Industry Mobility of Low-wage Workers</li>
-</ul>
-
   
 <h2>Working Papers</h2>
 <ul style="list-style-type:none">
   <li style="padding: 0 0 1em 0"><a href="/research/EITC_childless_adults_2.22.2020.pdf"><b>"The Earned Income Tax Credit and Employment for Childless Adults: Evidence using the CPS"</a></b></li>
   <li style="padding: 0 0 1em 0"> The Earned Income Tax Credit, a program designed to aid low-income households, and encourage work, lifts millions of families out of poverty every year. Given its' pro-work incentives, there has been droves of research analyzing the magnitude of employment effects, most of which has been focused around households with children. I focus on employment effects for an understudied population, childless adults, who have recently been the center of EITC expansion policy discussions. I use a difference-in-differences (DD) framework with Current Population Survey data to estimate the impact of expanding state EITCs on the employment of childless adults. Expanding state EITCs has led to significant increases in employment for childless women and small insignificant effects for childless men. A closer examination uncovers meaningful differences between men and women in the characteristics of marginal workers that future EITC expansions should take into account. </li>
 </ul>  
+
+<h2>Doctoral Dissertation</h2>
+<ul style="list-style-type:none">
+   <li style="padding: 0 0 1em 0"><a href="/research/TAMUdissertation_Spring2020.pdf"><b>"Essays on The Employment of Low-income Workers"</a></b></li>
+   <li> Chapter 1: The Earned Income Tax Credit and Employment for Childless Adults </li>
+   <li> Chapter 2: Public Health Insurance and Retirement Decisions </li>
+   <li> Chapter 3: Occupation and Industry Mobility of Low-wage Workers</li>
+</ul>
   
 <ul style="list-style-type:none">
   <li style="padding: 0 0 1em 0"><a href="/research/adoption_manuscript.pdf"><b>"The Economic Consequences of Placing a Child for Adoption"</a> (with Joseph Price, Julie Hollenbaugh, and
